<resources>
    <string name="app_name">ArtigosPub</string>
    <string name="action_settings">Settings</string>
    <string name="inicio">Início</string>
    <string name="status">Status</string>
    <string name="title_activity_artigo_edit">Artigo - Editar</string>
    <string name="nome_artigo">Nome do Artigo</string>
    <string name="destino_publicacao">Destino para Publicação</string>
    <string name="data_inicial">Data Inicial</string>
    <string name="status_workflow">Status do Workflow</string>
    <string name="versao_documento">Versão do Documento</string>
    <string name="autor">Autor</string>
    <string name="valor_invalido">Valor Inválido!</string>
    <string name="action_destinos">Destinos de publicação</string>
    <string name="action_workflow">Workflow</string>
    <string name="action_versoes">Versões de Documentos</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_artigos">Artigos</string>
    <string name="action_search">Pesquisar</string>
    <string name="search_hint">Pesquisar</string>
    <string name="comentarios">Comentários</string>
    <string name="data_limite">Data Limite</string>
    <string name="action_delete">Excluir</string>
    <string name="delete_item">Excluir Item</string>
    <string name="confirm_delete_item">Confirma a exclusão do item?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="save_sucess">Item gravado com sucesso!</string>
    <string name="delete_sucess">Item excluído com sucesso!</string>
    <string name="quit">Encerrar</string>
    <string name="confirm_quit">Confirma encerrar?</string>
    <string name="sistema">Sistema</string>
    <string name="filter">Pesquisa</string>
    <string name="clear_filter">Limpar</string>
    <string name="discard">Descartar</string>
    <string name="novo_workflow">Nova Versão/Workflow</string>
    <string name="confirm_novo_workflow">A versão e/ou o workflow foram alterados. Confirma a geração de um novo registro?</string>
    <string name="data_status">Data de Registro</string>
    <string name="action_change_password">Redefinir Senha</string>
    <string name="ok">Ok</string>
    <string name="artigos_data_limite">Artigos na Data Limite</string>
    <string name="artigos_no_limite_7_dias">artigo(s) deve(m) ser entregue(s) nos próximos 7 dias.</string>
</resources>
