<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.tibomenga.artigospub.ArtigosActivity">
    <item
        android:id="@+id/action_destinos"
        android:orderInCategory="10"
        android:title="@string/action_destinos"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_workflow"
        android:orderInCategory="20"
        android:title="@string/action_workflow"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_versoes"
        android:orderInCategory="20"
        android:title="@string/action_versoes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
